; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_erom.c_bhnd_erom_io_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_erom.c_bhnd_erom_io_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_erom_io = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bhnd_erom_io_read(%struct.bhnd_erom_io* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bhnd_erom_io*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.bhnd_erom_io* %0, %struct.bhnd_erom_io** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.bhnd_erom_io*, %struct.bhnd_erom_io** %4, align 8
  %8 = getelementptr inbounds %struct.bhnd_erom_io, %struct.bhnd_erom_io* %7, i32 0, i32 0
  %9 = bitcast {}** %8 to i32 (%struct.bhnd_erom_io*, i32, i32)**
  %10 = load i32 (%struct.bhnd_erom_io*, i32, i32)*, i32 (%struct.bhnd_erom_io*, i32, i32)** %9, align 8
  %11 = load %struct.bhnd_erom_io*, %struct.bhnd_erom_io** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 %10(%struct.bhnd_erom_io* %11, i32 %12, i32 %13)
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
